@@ -1,7 +1,6 @@
 package com.example.shoppingapi.service;
 
 import com.example.shoppingapi.model.ProductVariant;
-import com.example.shoppingapi.model.Product;
 import com.example.shoppingapi.modelhelper.ModelHelper;
 import com.example.shoppingapi.modelhelper.ModelHelperFactory;
 import com.example.shoppingapi.repository.ProductVariantRepository;
@@ -10,11 +9,11 @@ import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
+
 import org.mockito.junit.jupiter.MockitoExtension;
-import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.data.rest.webmvc.ResourceNotFoundException;
 
-import java.util.Arrays;
+import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
@@ -24,167 +23,112 @@ import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
-@SpringBootTest(classes = ProductVariantServiceTests.class)
-public class ProductVariantServiceTests {
+class ProductVariantServiceTest {
 
-    @Mock
-    private ProductVariantRepository productVariantRepository;
+    @Mock private ProductVariantRepository variantRepo;
+    @Mock private ProductRepository        productRepo;
+    @InjectMocks private ProductVariantService service;
 
-    @Mock
-    private ProductRepository productRepository;
-
-    @InjectMocks
-    private ProductVariantService productVariantService;
-
-    private final ModelHelper<ProductVariant> productVariantHelper = ModelHelperFactory.getModelHelper(ProductVariant.class);
+    private final ModelHelper<ProductVariant> helper =
+        ModelHelperFactory.getModelHelper(ProductVariant.class);
 
     @Test
-    public void testFindAll() {
-        ProductVariant productVariant1 = productVariantHelper.createModel(1);
-        ProductVariant productVariant2 = productVariantHelper.createModel(2);
-        List<ProductVariant> variantList = Arrays.asList(productVariant1, productVariant2);
+    void findAll_returnsAllVariants() {
+        List<ProductVariant> list = List.of(helper.createModel(1), helper.createModel(2));
+        when(variantRepo.findAll()).thenReturn(list);
 
-        when(productVariantRepository.findAll()).thenReturn(variantList);
-
-        List<ProductVariant> result = productVariantService.findAll();
-        assertNotNull(result);
-        assertEquals(2, result.size());
-        verify(productVariantRepository, times(1)).findAll();
+        assertEquals(list, service.findAll());
+        verify(variantRepo).findAll();
     }
 
     @Test
-    public void testFindById_Found() {
-        ProductVariant productVariant = productVariantHelper.createModel(1);
-        when(productVariantRepository.findById(productVariant.getVariantId())).thenReturn(Optional.of(productVariant));
+    void findById_found_returnsVariant() {
+        ProductVariant v = helper.createModel(1);
+        when(variantRepo.findById(1L)).thenReturn(Optional.of(v));
 
-        Optional<ProductVariant> result = productVariantService.findById(productVariant.getVariantId());
-        assertTrue(result.isPresent());
-        assertEquals(productVariant.getVariantId(), result.get().getVariantId());
-        verify(productVariantRepository, times(1)).findById(productVariant.getVariantId());
+        assertEquals(v, service.findById(1L));
     }
 
     @Test
-    public void testFindById_NotFound() {
-        when(productVariantRepository.findById(1L)).thenReturn(Optional.empty());
-        Optional<ProductVariant> result = productVariantService.findById(1L);
-        assertFalse(result.isPresent());
-        verify(productVariantRepository, times(1)).findById(1L);
-    }
-
-    @Test
-    public void testFindByProductId() {
-        ProductVariant productVariant = productVariantHelper.createModel(1);
-        Long productId = productVariant.getProduct().getProductId();
-        when(productVariantRepository.findProductVariantbyProductId(productId)).thenReturn(Optional.of(productVariant));
-
-        Optional<ProductVariant> result = productVariantService.findByProductId(productId);
-        assertTrue(result.isPresent());
-        assertEquals(productId, result.get().getProduct().getProductId());
-        verify(productVariantRepository, times(1)).findProductVariantbyProductId(productId);
-    }
-
-    @Test
-    public void testSaveProductVariant() {
-        ProductVariant productVariant = productVariantHelper.createModel(1);
-        Product product = productVariant.getProduct();
-
-        when(productRepository.existsById(product.getProductId())).thenReturn(true);
-        when(productVariantRepository.save(any(ProductVariant.class))).thenReturn(productVariant);
-
-        ProductVariant created = productVariantService.saveProductVariant(productVariant);
-        assertNotNull(created);
-        assertEquals(productVariant.getVariantId(), created.getVariantId());
-        verify(productRepository, times(1)).existsById(product.getProductId());
-        verify(productVariantRepository, times(1)).save(productVariant);
-    }
-
-    @Test
-    public void testSaveProductVariant_ProductNotFound_ThrowsException() {
-        ProductVariant productVariant = productVariantHelper.createModel(1);
-        Product product = productVariant.getProduct();
-
-        when(productRepository.existsById(product.getProductId())).thenReturn(false);
-        Exception exception = assertThrows(IllegalArgumentException.class, () -> productVariantService.saveProductVariant(productVariant));
-        assertEquals("Product not found. Cannot create product variant.", exception.getMessage());
-        verify(productRepository, times(1)).existsById(product.getProductId());
-        verify(productVariantRepository, never()).save(any(ProductVariant.class));
-    }
-
-    @Test
-    public void testUpdateProductVariant() {
-        ProductVariant existing = productVariantHelper.createModel(1);
-        
-        when(productVariantRepository.findById(existing.getVariantId())).thenReturn(Optional.of(existing));
-        when(productRepository.findById(existing.getProduct().getProductId())).thenReturn(Optional.of(existing.getProduct()));
-
-        ProductVariant updated = existing.toBuilder().variantName("choco").build();
-        updated.setVariantId(existing.getVariantId());
-
-        when(productVariantRepository.findById(updated.getProduct().getProductId())).thenReturn(Optional.of(existing));
-        when(productVariantRepository.save(any(ProductVariant.class))).thenReturn(updated);
-
-        ProductVariant result = productVariantService.updateProductVariant(existing.getVariantId(), updated);
-        assertNotNull(result);
-        assertEquals(updated, result);
-
-        verify(productVariantRepository, times(1)).findById(existing.getVariantId());
-        verify(productRepository, times(1)).findById(existing.getProduct().getProductId());
-        verify(productVariantRepository, times(1)).save(updated);
-    }
-
-    @Test
-    public void testPartialUpdateProductVariant() {
-        ProductVariant existing = productVariantHelper.createModel(1);
-
-        when(productVariantRepository.findById(existing.getVariantId())).thenReturn(Optional.of(existing));
-        when(productVariantRepository.save(any(ProductVariant.class))).thenAnswer(invocation -> invocation.getArgument(0));
-
-        Map<String, Object> updates = Map.of(
-            "variantName", "Updated Variant Name",
-            "productReviews", 150,
-            "stockQuantity", 25,
-            "totalSold", 100
+    void findById_notFound_throwsException() {
+        when(variantRepo.findById(2L)).thenReturn(Optional.empty());
+        ResourceNotFoundException ex = assertThrows(
+            ResourceNotFoundException.class,
+            () -> service.findById(2L)
         );
-        ProductVariant result = productVariantService.partialUpdateProductVariant(existing.getVariantId(), updates);
-
-        assertNotNull(result);
-        assertEquals("Updated Variant Name", result.getVariantName());
-        assertEquals(150, result.getProductReviews());
-        assertEquals(25, result.getStockQuantity());
-        assertEquals(100, result.getTotalSold());
-        
-        verify(productVariantRepository, times(1)).findById(existing.getVariantId());
-        verify(productVariantRepository, times(1)).save(existing);
-    }
-
-
-    @Test
-    public void testSoftdeleteById() {
-        ProductVariant productVariant = productVariantHelper.createModel(1);
-        when(productVariantRepository.findById(productVariant.getVariantId())).thenReturn(Optional.of(productVariant));
-        when(productVariantRepository.save(any(ProductVariant.class))).thenAnswer(invocation -> invocation.getArgument(0));
-
-        ProductVariant deletedVariant = productVariantService.deleteById(productVariant.getVariantId());
-
-        assertNotNull(deletedVariant);
-        assertNotNull(deletedVariant.getDeletedAt());
-        assertEquals(deletedVariant.getVariantId(),productVariant.getVariantId());
-
-        verify(productVariantRepository, times(1)).save(productVariant);
-        verify(productVariantRepository, times(1)).findById(productVariant.getVariantId());
+        assertEquals("ProductVariant not found with ID: 2", ex.getMessage());
     }
 
     @Test
-    public void testSoftdeleteById_NotFound() {
-        when(productVariantRepository.findById(1L)).thenReturn(Optional.empty());
+    void saveProductVariant_success_savesAndReturns() {
+        ProductVariant v = helper.createModel(1);
+        when(productRepo.existsById(v.getProduct().getProductId())).thenReturn(true);
+        when(variantRepo.save(any())).thenReturn(v);
 
-        try {
-            productVariantService.deleteById(1L);
-        } catch (ResourceNotFoundException e) {
-            assertEquals("ProductVariant not found with ID: 1", e.getMessage());
-        }
-
-        verify(productVariantRepository, times(1)).findById(1L);
+        assertEquals(v, service.saveProductVariant(v));
+        verify(variantRepo).save(v);
     }
 
+    @Test
+    void saveProductVariant_missingProduct_throwsException() {
+        ProductVariant v = helper.createModel(1);
+        v.setProduct(null);
+
+        IllegalArgumentException ex = assertThrows(
+            IllegalArgumentException.class,
+            () -> service.saveProductVariant(v)
+        );
+        assertEquals("Product ID is required to create a product variant.", ex.getMessage());
+    }
+
+    @Test
+    void saveProductVariant_productNotFound_throwsException() {
+        ProductVariant v = helper.createModel(1);
+        when(productRepo.existsById(v.getProduct().getProductId())).thenReturn(false);
+
+        IllegalArgumentException ex = assertThrows(
+            IllegalArgumentException.class,
+            () -> service.saveProductVariant(v)
+        );
+        assertEquals("Product not found. Cannot create product variant.", ex.getMessage());
+    }
+
+    @Test
+    void updateProductVariant_success_savesUpdated() {
+        ProductVariant orig = helper.createModel(1);
+        when(variantRepo.findById(1L)).thenReturn(Optional.of(orig));
+        when(productRepo.existsById(orig.getProduct().getProductId())).thenReturn(true);
+        when(variantRepo.save(any())).thenAnswer(i -> i.getArgument(0));
+
+        ProductVariant upd = orig.toBuilder().variantName("New").build();
+        ProductVariant res = service.updateProductVariant(1L, upd);
+
+        assertEquals("New", res.getVariantName());
+    }
+
+    @Test
+    void partialUpdateProductVariant_appliesUpdates() {
+        ProductVariant v = helper.createModel(1);
+        when(variantRepo.findById(1L)).thenReturn(Optional.of(v));
+        when(variantRepo.save(any())).thenAnswer(i -> i.getArgument(0));
+
+        Map<String,Object> changes = Map.of(
+            "variantName","X", "stockQuantity",50
+        );
+        ProductVariant res = service.partialUpdateProductVariant(1L, changes);
+
+        assertEquals("X", res.getVariantName());
+        assertEquals(50,   res.getStockQuantity());
+    }
+
+    @Test
+    void softDeleteProductVariant_setsDeletedAt() {
+        ProductVariant v = helper.createModel(1);
+        when(variantRepo.findById(1L)).thenReturn(Optional.of(v));
+        when(variantRepo.save(any())).thenAnswer(i -> i.getArgument(0));
+
+        ProductVariant res = service.softDeleteProductVariant(1L);
+        assertNotNull(res.getDeletedAt());
+        assertTrue(res.getDeletedAt().isBefore(LocalDateTime.now().plusSeconds(1)));
+    }
 }
